--- a/Inflearn/hello-spring/hello-spring/src/main/resources/templates/home.html
+++ b/Inflearn/hello-spring/hello-spring/src/main/resources/templates/home.html
@@ -8,7 +8,7 @@
         <p>회원 기능</p>
         <p>
             <a href="/members/new">회원 가입</a>
-            <a href="/membeers">회원 목록</a>
+            <a href="/members">회원 목록</a>
         </p>
     </div>
 </div>   <!-- /container -->
